--- a/angular14-react/angular-profile/src/app/profile/components/profile/profile.component.html
+++ b/angular14-react/angular-profile/src/app/profile/components/profile/profile.component.html
@@ -3,7 +3,13 @@
 
         <form [formGroup]="angForm">
           <div>
-            <input type="text" formControlName="name" placeholder="Name" #name/>
+            <input
+              type="text"
+              formControlName="name"
+              placeholder="Name"
+              data-e2e="FORM__FIELD_NAME"
+              #name
+            />
             <div *ngIf="angForm.controls['name'].invalid && (angForm.controls['name'].dirty || angForm.controls['name'].touched)" class="alert alert-danger">
               <div *ngIf="$any(angForm.controls)['name'].errors['required']">
                 Name is required.
@@ -11,7 +17,13 @@
             </div>
           </div>
           <div>
-            <input type="email" formControlName="email" placeholder="Email" #email/>
+            <input
+              type="email"
+              formControlName="email"
+              placeholder="Email"
+              data-e2e="FORM__FIELD_EMAIL"
+              #email
+            />
             <div *ngIf="angForm.controls['email'].invalid && (angForm.controls['email'].dirty || angForm.controls['email'].touched)" class="alert alert-danger">
               <div *ngIf="$any(angForm.controls)['email'].errors['required']">
                 Email is required.
