--- a/angular15-microfrontends-lazy-components/projects/mdmf-profile/src/app/profile/components/profile/profile.component.html
+++ b/angular15-microfrontends-lazy-components/projects/mdmf-profile/src/app/profile/components/profile/profile.component.html
@@ -12,7 +12,7 @@
               class="form-control"
               formControlName="name"
               placeholder="Name"
-              data-e2e="FORM__FIELD_NAME"
+              data-e2e="FORM_FIELD__NAME"
               #name
             />
             <div *ngIf="angForm.controls['name'].invalid && (angForm.controls['name'].dirty || angForm.controls['name'].touched)" class="alert alert-danger">
@@ -27,7 +27,7 @@
               class="form-control"
               formControlName="email"
               placeholder="Email"
-              data-e2e="FORM__FIELD_EMAIL"
+              data-e2e="FORM_FIELD__EMAIL"
               #email
             />
             <div *ngIf="angForm.controls['email'].invalid && (angForm.controls['email'].dirty || angForm.controls['email'].touched)" class="alert alert-danger">
