Add scripts for build & run app in back for CI

--- a/angular14-react/angular-profile/src/app/profile/components/profile/profile.component.html
+++ b/angular14-react/angular-profile/src/app/profile/components/profile/profile.component.html
@@ -31,7 +31,7 @@
             </div>
           </div>
           <div>
-            <button (click)="addUser(name.value, email.value)"
+            <button class="btn btn-primary" (click)="addUser(name.value, email.value)"
                 [disabled]="angForm.pristine || angForm.invalid">Create User</button>
           </div>
         </form>
